Updated html to have input fields vertical

--- a/templates/words.html
+++ b/templates/words.html
@@ -10,39 +10,56 @@
     <form action="/madlib">
     <h1>Please fill in the blanks!</h1>
     <label for="adjective-text-1">Please enter an adjective:</label>
-    <input type="text" name="adjective-1" id="adjective-text-1">
+    <input type="text" name="adjective-1" id="adjectives" required>
+    <br>
     <label for="adjective-text-2">Please enter an adjective:</label>
-    <input type="text" name="adjective-2" id="adjective-text-1">
+    <input type="text" name="adjective-2" id="adjectives" required>
+    <br>
     <label for="adjective-text-3">Please enter an adjective:</label>
-    <input type="text" name="adjective-3" id="adjective-text-1">
+    <input type="text" name="adjective-3" id="adjectives" required>
+    <br>
     <label for="cereal-text">Please enter a cereal:</label>
-    <input type="text" name="cereal" id="cereal-text">
+    <input type="text" name="cereal" id="cereal" required>
+    <br>
     <label for="candy-text-1">Please enter a candy:</label>
-    <input type="text" name="candy-1" id="candy-text-1">
+    <input type="text" name="candy-1" id="candies" required>
+    <br>
     <label for="building-text">Please enter a building:</label>
-    <input type="text" name="building" id="building-text">
+    <input type="text" name="building" id="building" required>
+    <br>
     <label for="planet-text">Please enter a planet:</label>
-    <input type="text" name="planet" id="planet-text">
+    <input type="text" name="planet" id="planet" required>
+    <br>
     <label for="type-of-cake-text">Please enter a type of cake:</label>
-    <input type="text" name="cake" id="type-of-cake-text-1">
+    <input type="text" name="cake" id="cake" required>
+    <br>
     <label for="candy-text-2">Please enter a candy:</label>
-    <input type="text" name="candy-2" id="candy-text-2">
+    <input type="text" name="candy-2" id="candies" required>
+    <br>
     <label for="fav-chocolate-text">Please enter your favorite chocolate:</label>
-    <input type="text" name="chocolate" id="fav-chocolate-text">
+    <input type="text" name="chocolate" id="choclate" required>
+    <br>
     <label for="soda-text">Please enter a kind of soda:</label>
-    <input type="text" name="soda" id="soda-text">
+    <input type="text" name="soda" id="soda" required>
+    <br>
     <label for="shape-text">Please enter a shape:</label>
-    <input type="text" name="shape" id="shape-text">
+    <input type="text" name="shape" id="shape" required>
+    <br>
     <label for="cookie-text">Please enter a type of cookie:</label>
-    <input type="text" name="cookie" id="cookie-text">
+    <input type="text" name="cookie" id="cookie" required>
+    <br>
     <label for="flavor-text">Please enter a flavor:</label>
-    <input type="text" name="flavor" id="flavor-text">
+    <input type="text" name="flavor" id="flavor" required>
+    <br>
     <label for="adjective-text-4">Please enter an adjective:</label>
-    <input type="text" name="adjective-4" id="adjective-text-4">
+    <input type="text" name="adjective-4" id="adjectives" required>
+    <br>
     <label for="name-text">Please enter a name:</label>
-    <input type="text" name="name" id="name-text">
+    <input type="text" name="name" id="name" required>
+    <br>
     <label for="animal-text">Please enter an animal:</label>
-    <input type="text" name="animal" id="animal-text">
+    <input type="text" name="animal" id="animal" required>
+    <br>
     <input type="submit" value="Complete">
 </body>
 </html>
